docs/update-docs-info
